package enums;

public enum Comando {
    Do,
    Re,
    Mi,
    Fa,
    Sol,
    La,
    Si,
    Volume,
    Agogo,
    Horpischord,
    AumentaOitava,
    Bells,
    Flute,
    Organ,
    IncrementaInstrumento,
    Silencio;
}
