package tocador;

import enums.Comando;

import java.util.List;

public interface TradutorAdaptador {
    String traduzParaAdapatador(Comando comando);
}
